notsaga/cart.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cart-cs
  name: cart-cs
spec:
  selector:
    app: cart
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cart
  name: cart
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cart
  template:
    metadata:
      labels:
        app: cart
    spec:
      containers:
        - name: cart
          imagePullPolicy: Always
          image: stiesssh/cart:v0.1.0
          ports:
            - containerPort: 8080
      restartPolicy: Always
