notsaga/cart_local_withprobe.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cart-cs
  name: cart-cs
spec:
  selector:
    app: cart
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cart
  name: cart
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cart
  template:
    metadata:
      labels:
        app: cart
    spec:
      containers:
        - name: cart
          imagePullPolicy: Never
          image: cartx:latest
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
          
      restartPolicy: Always
