notsaga/ui.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ui-cs
  name: ui-cs
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: ui
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ui
  name: ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
    spec:
      containers:
        - name: ui
          imagePullPolicy: Always
          image: stiesssh/ui:main
          ports:
            - containerPort: 8080
      restartPolicy: Always
