notsaga/uibackend.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: uibackend
  name: uibackend
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: uibackend
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: uibackend
  name: uibackend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uibackend
  template:
    metadata:
      labels:
        app: uibackend
    spec:
      containers:
        - name: uibackend
          imagePullPolicy: Never
          image: uibackend
          ports:
            - containerPort: 8080
      restartPolicy: Always
