notsaga/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: whataimevendoinghere
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
    # ui frontend paths
      - path: /ui/
        pathType: Prefix
        backend:
          serviceName: ui-cs # of referenced service
          servicePort: 80

# most sadly this one eats the prometheus BBE in the other namespace :( :( 
    # jaeger
#      - path: /
#        backend: # service endpoint to forward to 
#          serviceName: jaeger-query
#          servicePort: 80           
    # prometheus responsetime metrics
      - path: /actuator/prometheus
        backend:
          serviceName: provider-cs
          servicePort: 80
    # ui backend path by path :(
      - path: /products
        pathType: Prefix
        backend:
          serviceName: uibackend-cs # of referenced service
          servicePort: 80   
      - path: /cart
        pathType: Prefix
        backend:
          serviceName: uibackend-cs # of referenced service
          servicePort: 80  
      - path: /confirm
        pathType: Prefix
        backend:
          serviceName: uibackend-cs # of referenced service
          servicePort: 80
